--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 dataset/*.json filter=lfs diff=lfs merge=lfs -text
+dataset/CoDelusion_APPS.json filter=lfs diff=lfs merge=lfs -text
+dataset/CoDelusion_HumanEval.json filter=lfs diff=lfs merge=lfs -text
